Parsing, no major code errors.

--- a/website/index.html
+++ b/website/index.html
@@ -159,6 +159,7 @@
                               class="form-area"
                               type="text"
                               placeholder="Name*"
+                              aria-required="true"
                               required
                               title="Required contact name field"
                               />
@@ -169,6 +170,7 @@
                               class="form-area"
                               type="email"
                               placeholder="Email*"
+                              aria-required="true"
                               required
                               title="Required contact email field"
                               />
@@ -189,7 +191,6 @@
                               maxlength="500"
                               placeholder="Your questions* (500 character limit)"
                               required
-                              aria-labelledby="test"
                               title="Required text field to add your questions (500 character limit)"
                               ></textarea>
                         </div>
