Changing to aria-label for screen readers.

--- a/website/index.html
+++ b/website/index.html
@@ -191,6 +191,7 @@
                               maxlength="500"
                               placeholder="Your questions* (500 character limit)"
                               required
+                              aria-label="submit-questions"
                               title="Required text field to add your questions (500 character limit)"
                               ></textarea>
                         </div>
