--- a/website/index.html
+++ b/website/index.html
@@ -149,7 +149,7 @@
                <h5 class="secondary-heading" aria-hidden="true"> Message Form </h5>
                <div class="contact-wrap">
                   <article>
-                     <h5 class="secondary-heading" aria-hidden="true"> Message Form Fields </h5>
+                     <h5 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h5>
                      <!-- On click, the submit button will take users to the top of the page -->
                      <form action="#Home">
                         <div class="required">Required fields indicated by: *</div>
@@ -190,8 +190,8 @@
                               class="form-area"
                               maxlength="500"
                               placeholder="Your questions* (500 character limit)"
+                              aria-label="questions-textarea-required"
                               required
-                              aria-label="submit-questions"
                               title="Required text field to add your questions (500 character limit)"
                               ></textarea>
                         </div>
