ARIA Technique for css-background images.

--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
       </header>
       <main>
          <!-- Hero image -->
-         <div class="hero-image" Title="Welcome">
+         <div class="hero-image" role="img" aria-label="A wide shot of the Tocumwal houses in black and white" Title="Welcome to the Tocumwal Houses Archive">
             <div id="welcome-wrapper">
                <h1 class="parallax-header">Welcome</h1>
             </div>
@@ -73,7 +73,7 @@
          </div>
          <!-- End of into content -->
          <!-- Second parallax scrolling image -->
-         <div id="Stories" class="parallax-image2" title="Tocumwal Stories">
+         <div id="Stories" class="parallax-image2" role="img" aria-label="A wide shot of a house from the Tocumwal Archive" title="Tocumwal Stories from the ACT Heritage Library">
             <div id="stories-wrapper" class="stories-background">
                <h1 class="parallax-header">Tocumwal Stories</h1>
             </div>
@@ -114,7 +114,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentfour.jpg" class="middle-image3" title="The Sylvia Hollier story" alt="Front yard and the front of a Tocumwal house in O'Connor.">
+                     <img src="assets/images/contentfour.jpg" class="middle-image3" title="The Sylvia Hollier story" alt="Front yard of a Tocumwal house in O'Connor.">
                   </div>
                   <div class="block-content">
                      <h3 class="story-heading">Sylvia Hollier:</h3>
