--- a/website/index.html
+++ b/website/index.html
@@ -152,44 +152,48 @@
                      <h5 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h5>
                      <!-- On click, the submit button will take users to the top of the page -->
                      <form action="#Home">
-                        <div class="required">Required fields indicated by: *</div>
+                        <div class="required">Required fields indicated by:<span class="asterisk">*</span></div>
                         <div class="form-spacing">
+                           <div class="form-field">First name<span class="asterisk">*</span></div>
                            <input
                               name="contact_name"
                               class="form-area"
                               type="text"
-                              placeholder="Name*"
+                              placeholder="First name"
                               aria-required="true"
                               required
                               title="Required contact name field"
-                              />
+                              /> 
                         </div>
                         <div class="form-spacing">
+                           <div class="form-field">Email<span class="asterisk">*</span></div>
                            <input
                               name="contact_email"
                               class="form-area"
                               type="email"
-                              placeholder="Email*"
+                              placeholder="Enter an email address"
                               aria-required="true"
                               required
                               title="Required contact email field"
                               />
                         </div>
                         <div class="form-spacing">
+                           <div class="form-field">Phone number</div>
                            <input
                               name="contact_phone"
                               class="form-area"
                               type="tel"
-                              placeholder="Phone Number (optional)"
+                              placeholder="Enter a phone number"
                               title="Optional contact phone number field"
                               />
                         </div>
                         <div class="form-spacing">
+                           <div class="form-field">Your questions<span class="asterisk">*</span></div>
                            <textarea
                               name="contact_questions"
                               class="form-area"
                               maxlength="500"
-                              placeholder="Your questions* (500 character limit)"
+                              placeholder="Enter your questions (500 character limit)"
                               aria-label="questions-textarea-required"
                               required
                               title="Required text field to add your questions (500 character limit)"
