More accessability stuff.

--- a/website/index.html
+++ b/website/index.html
@@ -159,7 +159,7 @@
                               name="contact_name"
                               class="form-area"
                               type="text"
-                              placeholder="First name"
+                              placeholder="Enter your first name"
                               aria-required="true"
                               required
                               title="Required contact name field"
@@ -194,7 +194,7 @@
                               class="form-area"
                               maxlength="500"
                               placeholder="Enter your questions (500 character limit)"
-                              aria-label="questions-textarea-required"
+                              aria-label="required-question-field"
                               required
                               title="Required text field to add your questions (500 character limit)"
                               ></textarea>
