Small fixes, get rid of skip to content button for smaller reso - ruins accessability.

--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
    <body>
       <a href="#ContentStart" class="skipbtn" title="Skip to main-content button">Skip to main-content (Press Enter) </a>
       <header class="container" id="Home">
-         <div>
+         <div class="main-title">
             <h1 class="title">Tocumwal Houses Archive</h1>
          </div>
          <nav class="navbar">
