Fixing heading-level outline and structural outlines.

--- a/website/index.html
+++ b/website/index.html
@@ -39,10 +39,10 @@
             <div>
                <section>
                   <header class="content-header">
-                     <h3 class="h3body">The Tocumwal Archive</h3>
+                     <h2 class="h2body">The Tocumwal Archive</h2>
                   </header>
                   <article>
-                     <h4 class="headings highlight">Introduction</h4>
+                     <h3 class="headings">Introduction</h3>
                      <p class="content">
                         The Tocumwal Archive is a collection of stories and photographs, about living in the houses that were moved from the Tocumwal 
                         air force base in New South Wales, to the Canberra suburb of O'Connor.  
@@ -58,10 +58,10 @@
             <div>
                <section>
                   <header>
-                     <h3 class="h3body">Statement of Signifigance</h3>
+                     <h2 class="h2body">Statement of Signifigance</h2>
                   </header>
                   <article>
-                     <h4 class="headings">Heritage</h4>
+                     <h3 class="headings">Heritage</h3>
                      <p class="content">The Tocumwal Housing Precinct in O'Connor is significant as an outstanding example of low cost pre-fabricated housing, which was constructed in Canberra after World War 2.
                      </p>
                      <p class="content content3">  As part of the Government's solution to the critical housing shortage being experienced in Canberra at the time, many of the houses originally constructed at Tocumwal
@@ -87,7 +87,7 @@
                      <img src="assets/images/contentthree.jpg" class="middle-image1" title="The Darryl McIntyre and Noel Flanagan story" alt="Soldiers resting inside the barracks.">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Dr Darryl McIntyre and Noel Flanagan:</h3>
+                     <h2 class="story-heading">Dr Darryl McIntyre and Noel Flanagan:</h2>
                      <p class="content2">
                         After the bombing of Darwin, the United States of America and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance. (contributed 2000)
                      </p>
@@ -101,7 +101,7 @@
                      <img src="assets/images/contentfive.jpg" class="middle-image2" title="The Sylvia Glenndenning story" alt="Front porch of a Tocumwal house in O'Connor.">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Sylvia Glenndenning:</h3>
+                     <h2 class="story-heading">Sylvia Glenndenning:</h2>
                      <p class="content2">
                         I remember seeing houses in sections going along the highway on big trucks. The Murray Valley Highway was really narrow and they seemed to take up all of the road. I knew they came from Tocumwal but I didn't know where they were going.  (contributed 1996)
                      </p>
@@ -117,7 +117,7 @@
                      <img src="assets/images/contentfour.jpg" class="middle-image3" title="The Sylvia Hollier story" alt="Front yard of a Tocumwal house in O'Connor.">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Sylvia Hollier:</h3>
+                     <h2 class="story-heading">Sylvia Hollier:</h2>
                      <p class="content2">
                         My family was aware of Tocumwal and its houses long before they became a feature of the streets of O'Connor. My father, Hartley Hollier, was a serving member of the RAAF from 1936-46 and was actually stationed at Tocumwal. (contributed 1996)
                      </p>
@@ -131,7 +131,7 @@
                      <img src="assets/images/contentone.jpg" class="middle-image4" title="The Andrew Morris story" alt="Tocumwal Houses in Ainslie. ACT HL.">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Andrew Morris:</h3>
+                     <h2 class="story-heading">Andrew Morris:</h2>
                      <p class="content2">
                         We arrived in Australia in 1966 and bought this house in Quinn Street, O'Connor. The house, a Tocumwal type, had a huge back yard. There were all types of fruit trees, pencil pines and nut trees growing. But it was the large block off the beaten track that attracted me. (contriubted 1996)
                      </p>
@@ -146,10 +146,10 @@
                <h2 class="contact-heading">Message us your questions!</h2>
             </header>
             <section id="form">
-               <h5 class="secondary-heading" aria-hidden="true"> Message Form </h5>
+               <h3 class="secondary-heading" aria-hidden="true"> Message Form </h3>
                <div class="contact-wrap">
                   <article>
-                     <h5 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h5>
+                     <h4 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h4>
                      <!-- On click, the submit button will take users to the top of the page -->
                      <form action="#Home">
                         <div class="required">Required fields indicated by: <span class="asterisk">*</span></div>
