--- a/website/index.html
+++ b/website/index.html
@@ -152,26 +152,26 @@
                      <h4 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h4>
                      <!-- On click, the submit button will take users to the top of the page -->
                      <form action="#Home">
-                        <div class="required">Required fields indicated by: <span class="asterisk">*</span></div>
+                        <div class="align-required">Required fields indicated by: (required)<span class="required">*</span></div>
                         <div class="form-spacing">
-                           <label class="form-field">First name <span class="asterisk" title="This field is required.">*</span></label>
+                           <label class="form-field">First name (required)<span class="required" title="This field is required.">*</span></label>
                            <input
                               name="contact_name"
                               class="form-area"
                               type="text"
-                              placeholder="Enter your first name"
+                              placeholder="Enter your first name."
                               aria-required="true"
                               required
                               title="Required contact name field"
                               /> 
                         </div>
                         <div class="form-spacing">
-                           <label class="form-field">Email <span class="asterisk" title="This field is required.">*</span></label>
+                           <label class="form-field">Email (required)<span class="required" title="This field is required.">*</span></label>
                            <input
                               name="contact_email"
                               class="form-area"
                               type="email"
-                              placeholder="Enter an email address"
+                              placeholder="Enter an email address."
                               aria-required="true"
                               required
                               title="Required contact email field"
@@ -183,18 +183,18 @@
                               name="contact_phone"
                               class="form-area"
                               type="tel"
-                              placeholder="Enter a phone number"
+                              placeholder="Enter a phone number."
                               title="Optional contact phone number field"
                               />
                         </div>
                         <div class="form-spacing">
-                           <label class="form-field">Your questions <span class="asterisk" title="This field is required.">*</span></label>
+                           <label class="form-field">Your questions (required)<span class="required" title="This field is required.">*</span></label>
                            <textarea
                               name="contact_questions"
                               class="form-area"
                               maxlength="500"
-                              placeholder="Enter your questions (500 character limit)"
-                              aria-label="Required question field (500 character limit)"
+                              placeholder="Enter your questions (500 character limit)."
+                              aria-label="Question field (500 character limit)"
                               required
                               title="Required text field to add your questions (500 character limit)"
                               ></textarea>
