Deleting redundant title atr and making nav colours better.

--- a/website/index.html
+++ b/website/index.html
@@ -13,16 +13,16 @@
       <link rel="icon" type="image/png" href="assets/images/icon.png">
    </head>
    <body>
-      <a href="#ContentStart" class="skipbtn" title="Skip to main-content button">Skip to main-content (Press Enter) </a>
+      <a href="#ContentStart" class="skipbtn" title="Skip to main-content button">Skip to main-content (Press Enter)</a>
       <header class="container" id="Home">
          <div class="main-title">
             <h1 class="title">Tocumwal Houses Archive</h1>
          </div>
          <nav class="navbar">
             <ul>
-               <li><a href="#Home" title="Home page">Home</a></li>
-               <li><a href="#Stories" title="View the Tocumwal stories">Tocumwal Stories</a></li>
-               <li><a href="#Contact" title="Message us your questions">Message Us</a></li>
+               <li><a href="#Home">Home</a></li>
+               <li><a href="#Stories">Tocumwal Stories</a></li>
+               <li><a href="#Contact">Message Us</a></li>
             </ul>
          </nav>
       </header>
@@ -84,7 +84,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentthree.jpg" class="middle-image1" title="The Darryl McIntyre and Noel Flanagan story" alt="Soldiers resting inside the barracks.">
+                     <img src="assets/images/contentthree.jpg" class="middle-image1" alt="Soldiers resting inside the barracks." title="The Darryl McIntyre and Noel Flanagan story" >
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Dr Darryl McIntyre and Noel Flanagan:</h2>
@@ -98,7 +98,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentfive.jpg" class="middle-image2" title="The Sylvia Glenndenning story" alt="Front porch of a Tocumwal house in O'Connor.">
+                     <img src="assets/images/contentfive.jpg" class="middle-image2" alt="Front porch of a Tocumwal house in O'Connor." title="The Sylvia Glenndenning story" >
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Sylvia Glenndenning:</h2>
@@ -114,7 +114,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentfour.jpg" class="middle-image3" title="The Sylvia Hollier story" alt="Front yard of a Tocumwal house in O'Connor.">
+                     <img src="assets/images/contentfour.jpg" class="middle-image3" alt="Front yard of a Tocumwal house in O'Connor." title="The Sylvia Hollier story" >
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Sylvia Hollier:</h2>
@@ -200,7 +200,7 @@
                               ></textarea>
                         </div>
                         <div id="submit-center">
-                           <button class="submit-button" title="Submit button" aria-label="submit form">
+                           <button class="submit-button" aria-label="submit form">
                            Submit
                            </button>
                         </div>
@@ -215,9 +215,9 @@
       <div class="footer-background">
          <footer>
             <p> &#169; 0074 Tocumwal Houses Archive </p>
-            <p> <a class="footerclicked" href="https://www.library.act.gov.au/find/history/search/Manuscript_Collections/hmss_0074_tocumwal_houses_archive" title="Libraries ACT main webpage for the Tocumwal Houses Archive">About Tocumwal: Libraries ACT - Tocumwal Houses</a></p>
-            <p><a class="footerclicked" href="mailto:Library.customerinfo@act.gov.au" title="Email the library.act.gov.au inbox">Email: Library.customerinfo@act.gov.au</a></p>
-            <p><a class="footerclicked" href="https://www.library.act.gov.au/about/faqs" title="Libraries ACT frequently asked questions webpage">Libraries ACT: FAQ</a></p>
+            <p> <a class="footerclicked" href="https://www.library.act.gov.au/find/history/search/Manuscript_Collections/hmss_0074_tocumwal_houses_archive" >About Tocumwal: Libraries ACT - Tocumwal Houses</a></p>
+            <p><a class="footerclicked" href="mailto:Library.customerinfo@act.gov.au">Email: Library.customerinfo@act.gov.au</a></p>
+            <p><a class="footerclicked" href="https://www.library.act.gov.au/about/faqs">Libraries ACT: FAQ</a></p>
          </footer>
       </div>
    </body>
