--- a/website/index.html
+++ b/website/index.html
@@ -215,9 +215,9 @@
       <div class="footer-background">
          <footer>
             <p> &#169; 0074 Tocumwal Houses Archive </p>
-            <p> <a class="footerclicked" href="https://www.library.act.gov.au/find/history/search/Manuscript_Collections/hmss_0074_tocumwal_houses_archive" >About Tocumwal: Libraries ACT - Tocumwal Houses</a></p>
+            <p> <a class="footerclicked" href="https://www.library.act.gov.au/find/history/search/Manuscript_Collections/hmss_0074_tocumwal_houses_archive" >View the 0074 Tocumwal Houses Archive collection</a></p>
             <p><a class="footerclicked" href="mailto:Library.customerinfo@act.gov.au">Email: Library.customerinfo@act.gov.au</a></p>
-            <p><a class="footerclicked" href="https://www.library.act.gov.au/about/faqs">Libraries ACT: FAQ</a></p>
+            <p><a class="footerclicked" href="https://www.library.act.gov.au/about/faqs">Vist the Libraries ACT: FAQ</a></p>
          </footer>
       </div>
    </body>
