Parallax header fix at mobile res, other changes.

--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
+      <meta name="description" content="Tocumwal Houses Archive Home Page">
       <title>The Tocumwal Houses Archive</title>
       <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
       <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
@@ -75,7 +76,7 @@
          <!-- Second parallax scrolling image -->
          <div id="Stories" class="parallax-image2" role="img" aria-label="A wide shot of a house from the Tocumwal Archive" title="Tocumwal Stories from the ACT Heritage Library">
             <div id="stories-wrapper" class="stories-background">
-               <h1 class="parallax-header">Tocumwal Stories</h1>
+               <h1 class="parallax-header2">Tocumwal Stories</h1>
             </div>
          </div>
          <!-- Middle content -->
