--- a/website/index.html
+++ b/website/index.html
@@ -29,9 +29,12 @@
       </header>
       <main>
          <!-- Hero image -->
-         <div class="hero-image" role="img" aria-label="A wide shot of the Tocumwal houses in black and white" Title="Welcome to the Tocumwal Houses Archive">
-            <div id="welcome-wrapper">
-               <h1 class="parallax-header">Welcome</h1>
+         <!-- <div class="hero-image" role="img" aria-label="A wide shot of the Tocumwal houses in black and white" Title="Welcome to the Tocumwal Houses Archive"> -->
+         <div class="hero-image" aria-hidden="true">
+            <div class="hero-text">
+               <div id="welcome-wrapper">
+                  <h1 class="parallax-header">Welcome</h1>
+               </div>
             </div>
          </div>
          <!-- Flex container for into -->
@@ -74,9 +77,12 @@
          </div>
          <!-- End of into content -->
          <!-- Second parallax scrolling image -->
-         <div id="Stories" class="parallax-image2" role="img" aria-label="A wide shot of a house from the Tocumwal Archive" title="Tocumwal Stories from the ACT Heritage Library">
-            <div id="stories-wrapper" class="stories-background">
-               <h1 class="parallax-header2">Tocumwal Stories</h1>
+         <!-- <div id="Stories" class="parallax-image2" role="img" aria-label="A wide shot of a house from the Tocumwal Archive" title="Tocumwal Stories from the ACT Heritage Library"> -->
+         <div id="Stories" class="parallax-image2" aria-hidden="true">
+            <div class="stories-text">
+               <div id="stories-wrapper">
+                  <h1 class="parallax-header2">Tocumwal Stories</h1>
+               </div>
             </div>
          </div>
          <!-- Middle content -->
@@ -85,7 +91,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentthree.jpg" class="middle-image1" alt="Soldiers resting inside the barracks." title="The Darryl McIntyre and Noel Flanagan story" >
+                     <img src="assets/images/contentthree.jpg" class="middle-image1" alt="">
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Dr Darryl McIntyre and Noel Flanagan:</h2>
@@ -99,7 +105,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentfive.jpg" class="middle-image2" alt="Front porch of a Tocumwal house in O'Connor." title="The Sylvia Glenndenning story" >
+                     <img src="assets/images/contentfive.jpg" class="middle-image2" alt="">
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Sylvia Glenndenning:</h2>
@@ -115,7 +121,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentfour.jpg" class="middle-image3" alt="Front yard of a Tocumwal house in O'Connor." title="The Sylvia Hollier story" >
+                     <img src="assets/images/contentfour.jpg" class="middle-image3" alt="">
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Sylvia Hollier:</h2>
@@ -129,12 +135,12 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentone.jpg" class="middle-image4" title="The Andrew Morris story" alt="Tocumwal Houses in Ainslie. ACT HL.">
+                     <img src="assets/images/contentone.jpg" class="middle-image4" alt="">
                   </div>
                   <div class="block-content">
                      <h2 class="story-heading">Andrew Morris:</h2>
                      <p class="content2">
-                        We arrived in Australia in 1966 and bought this house in Quinn Street, O'Connor. The house, a Tocumwal type, had a huge back yard. There were all types of fruit trees, pencil pines and nut trees growing. But it was the large block off the beaten track that attracted me. (contriubted 1996)
+                        We arrived in Australia in 1966 and bought this house in Quinn Street, O'Connor. The house, a Tocumwal type, had a huge back yard. There were all types of fruit trees, pencil pines and nut trees growing. But it was the large block off the beaten track that attracted me. (contributed 1996)
                      </p>
                   </div>
                </div>
@@ -144,20 +150,21 @@
          <!-- Contact From -->
          <div class="contact-background" id="Contact">
             <header>
-               <h2 class="contact-heading">Message us your questions!</h2>
+               <h1 class="contact-heading">Message us your questions!</h1>
             </header>
             <section id="form">
-               <h3 class="secondary-heading" aria-hidden="true"> Message Form </h3>
+               <h2 class="secondary-heading" aria-hidden="true"> Message Form </h2>
                <div class="contact-wrap">
                   <article>
-                     <h4 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h4>
+                     <h3 class="secondary-heading" aria-hidden="true"> Contact Information and Questions </h3>
                      <!-- On click, the submit button will take users to the top of the page -->
                      <form action="#Home">
                         <div class="align-required">Required fields indicated by: (required)<span class="required">*</span></div>
                         <div class="form-spacing">
-                           <label class="form-field">First name (required)<span class="required" title="This field is required.">*</span></label>
+                           <label for="first_name" class="form-field">First name (required)<span class="required" title="This field is required.">*</span></label>
                            <input
                               name="contact_name"
+                              id="first_name"
                               class="form-area"
                               type="text"
                               placeholder="Enter your first name."
@@ -189,9 +196,10 @@
                               />
                         </div>
                         <div class="form-spacing">
-                           <label class="form-field">Your questions (required)<span class="required" title="This field is required.">*</span></label>
+                           <label for="contact" class="form-field">Your questions (required)<span class="required" title="This field is required.">*</span></label>
                            <textarea
                               name="contact_questions"
+                              id="contact"
                               class="form-area"
                               maxlength="500"
                               placeholder="Enter your questions (500 character limit)."
