--- a/website/index.html
+++ b/website/index.html
@@ -62,7 +62,7 @@
             <div>
                <section>
                   <header>
-                     <h2 class="h2body">Statement of Signifigance</h2>
+                     <h2 class="h2body">Statement of significance</h2>
                   </header>
                   <article>
                      <h3 class="headings">Heritage</h3>
